# ndastro-api

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  main_ndastro.yml
docs/: DATA_LOADER_IMPLEMENTATION_SUMMARY.md  index.md
docs/api/: astro.md  auth.md  config.md  health.md  overview.md  tiers.md  users.md
docs/assets/stylesheets/: extra.css
docs/configuration/: environment.md
docs/css/: custom.css
docs/development/: quick-start.md
docs/guides/: dasha-predictions.md  data-loader-quick-reference.md  data-loader.md
docs/overrides/partials/: logo.html
docs/services/: ashtakavarga.md  avasthas.md  chart.md  dasha.md  divisional_charts.md  longevity.md  muhurta.md  nakshatra_panchanga.md  position.md  prasna.md  strengths.md  transits.md  upagrahas.md  yogas.md
ndastro_api/: main.py
ndastro_api/alembic/versions/: 2025_07_14_1910-7506c7c231c5_initial_structures.py
ndastro_api/api/v1/: ashtakavarga.py  astro.py  avasthas.py  config.py  dasha.py  divisional.py  location.py  longevity.py  muhurta.py  nakshatra.py  prasna.py  routes.py  strengths.py  transits.py  upagrahas.py  yogas.py
ndastro_api/core/: config.py  constants.py  constants_prasna.py  constants_vedic.py  setup.py
ndastro_api/core/exceptions/: app_exceptions.py
ndastro_api/core/models/: astro_system.py  dasha.py  dasha_detail.py  kattam.py  muhurta.py  prasna.py
ndastro_api/core/utils/: chart_helpers.py  data_loader.py
ndastro_api/resources/data/: ashtakavarga.json  avasthas.json  career_counseling.json  compatibility_analysis.json  dasha_period_guide.json  dasha_systems.json  divisional_charts.json  houses.json  karanas.json  medical_astrology.json  muhurta_electional.json  nadi_astrology.json  nakshatras.json  planetary_yogas.json  planets.json  prasna_horary.json  predictive_techniques.json  rasis.json  relationship_synastry.json  remedial_measures_comprehensive.json  special_lagnas.json  spiritual_progress.json  tarabala.json  tithis.json  upagrahas.json  varas.json  wealth_timing.json  yogas.json  yogas_deep_dive.json
ndastro_api/services/: ashtakavarga.py  ashtakavarga_transits.py  aspect_strength.py  avasthas.py  bhava_strength.py  chart_utils.py  dasha.py  dasha_predictions.py  divisional_charts.py  kattams.py  location.py  longevity.py  muhurta_advanced.py  muhurta_range.py  nakshatra_traits.py  panchanga.py  position.py  prasna.py  shadbala.py  transit_effects.py  transits.py  upagrahas.py  utils.py  vimshopaka_bala.py  vimsottari_dasa.py  yoga_extended.py  yogas.py
ndastro_api/tests/: test_astro_models.py  test_dasha_api.py  test_data_format_validation.py  test_email_helper.py  test_location_api.py  test_middlewares.py  test_muhurta_range_api.py  test_position_service.py  test_prasna_api.py  test_schemas.py
ndastro_api/tests/core/: test_core_app_exceptions.py  test_core_constants.py  test_core_http_exceptions.py  test_core_models.py  test_core_schemas.py  test_core_security.py  test_core_security_v2.py
ndastro_api/tests/services/: test_location_service.py  (+37 more)
scripts/: mkdocs_hooks.py
