[project]
name = "ndastro-api"
version = "0.2.0"
description = "API to serve data for ndastro-ui"
authors = [
    {name = "Jaganathan, B", email = "jaganathan.eswaran@gmail.com"}
]
maintainers = [
    {name = "Jaganathan, B", email = "jaganathan.eswaran@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
fastapi = {extras = ["standard"], version = "^0.115.13"}
alembic = "^1.16.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.30.0"}
pydantic = "^2.11.7"
pydantic-settings = "^2.10.0"
pyjwt = "^2.10.1"
sqlmodel = "^0.0.24"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
emails = "^0.6"
tenacity = "^9.1.2"
python-dotenv = "^1.1.0"
bcrypt = "^4.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
skyfield = "^1.53"
pytz = "^2025.2"
gunicorn = "^23.0.0"
asyncpg = "^0.30.0"
fastcrud = "^0.15.12"
aiosqlite = "^0.21.0"
python-jose = "^3.5.0"
psutil = "^7.0.0"
babel = "^2.17.0"
fastapi-babel = "^1.0.0"
ndastro-engine = "0.17.0"
pdfplumber = "^0.11.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
types-passlib = "^1.7.7.20250602"
ruff = "^0.12.0"
mypy = "^1.16.1"
coverage = "^7.9.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.7.1"
pymdown-extensions = "^10.20"
pillow = "^12.1.1"
cairosvg = "^2.9.0"
commitizen = "4.11.0"

[tool.poetry.scripts]
pre-start = "ndastro_api.pre_start:main"
db-migrate = "ndastro_api.db_migrator:run_migration"
init-data = "ndastro_api.initial_data:main"
test-prestart = "ndastro_api.tests_pre_start:main"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore=["INP001", "COM812", "D213", "D203"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101", "D103", "D100", "ANN201"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
env_files = ["ndastro_api/.env.test"]
testpaths = [
    "ndastro_api/tests"
]

[tool.coverage.run]
omit = [
    "ndastro_api/main.py",
    "ndastro_api/db_migrator.py",
    "ndastro_api/initial_data.py",
    "ndastro_api/pre_start.py",
    "ndastro_api/tests_pre_start.py",
    "ndastro_api/gunicorn.conf.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.17.0"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
major_version_zero = true